fix: Adjust padding to fix overflow issue on top of featured blog

--- a/modules/asset/ui/src/scss/_blog.scss
+++ b/modules/asset/ui/src/scss/_blog.scss
@@ -18,7 +18,7 @@
 
   @media only screen and (max-width: 600px) {
     width: 100%;
-    padding: 0 20px;
+    padding: 80px 20px 0;
   }
 }
 
@@ -236,9 +236,10 @@
 }
 
 #blog-hero-header {
-  display: none;
   @media only screen and (max-width: 600px) {
-    display: block;
+    .description {
+      padding: 100px 32px 0;
+    }
   }
 }
 
